--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint-staged": "lint-staged",
-    "format": "prettier --write \"**/*.{ts, tsx, js, jsx, css, json, md}",
+    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,scss,css,json,md}\"",
     "prepare": "husky install"
   },
   "lint-staged": {
@@ -21,7 +21,8 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
@@ -34,6 +35,7 @@
     "husky": "^8.0.0",
     "lint-staged": "^13.1.2",
     "prettier": "^2.8.4",
+    "sass": "^1.58.2",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
   }
